--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,20 @@
 version: '3.8'
 
 services:
-  memgraph:
+  pythoncompile:
     build:
-      context: ./memgraph
+      context: .
       dockerfile: Dockerfile
-    container_name: memgraph-mage-genai
+    container_name: pythoncompile-app
+    ports:
+      - "8000:8000"
+    environment:
+      - OPENAI_API_KEY=${OPENAI_API_KEY} 
+    command: ["python", "app.py"]
+
+  memgraph:
+    image: memgraph/memgraph:latest
+    container_name: memgraph-db
     ports:
       - "7687:7687"
       - "7444:7444"
@@ -13,7 +22,7 @@ services:
 
   lab:
     image: memgraph/lab:latest
-    container_name: memgraph-lab-genai
+    container_name: memgraph-lab
     ports:
       - "3000:3000"
     depends_on:
@@ -21,19 +30,3 @@ services:
     environment:
       - QUICK_CONNECT_MG_HOST=memgraph
       - QUICK_CONNECT_MG_PORT=7687
-
-  fastapi:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: fastapi-app
-    ports:
-      - "8000:8000"
-    environment:
-      - NEO4J_URI=bolt://memgraph:7687
-      - NEO4J_USERNAME=""
-      - NEO4J_PASSWORD=""
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-    depends_on:
-      - memgraph
-    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
