--- a/.github/workflows/deploytoec2.yml
+++ b/.github/workflows/deploytoec2.yml
@@ -1,7 +1,7 @@
 name: Deploy to EC2 with Docker Compose
 
 on:
-  workflow_dispatch: # Ejecutar manualmente desde la interfaz de GitHub Actions
+  workflow_dispatch: # Ejecutar manualmente desde GitHub Actions
 
 jobs:
   deploy-to-ec2:
@@ -22,8 +22,10 @@ jobs:
             --targets "Key=instanceIds,Values=${{ secrets.EC2_INSTANCE_ID }}" \
             --document-name "AWS-RunShellScript" \
             --comment "Deploying application using Docker Compose" \
-            --parameters '{"commands":["aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin <account_id>.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com",
-                                  "echo '\''version: '\''3.8\'\\nservices:\\n  pythoncompile:\\n    image: 216989140286.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/test:latest\\n    ports:\\n      - '\''8000:8000'\''\\n    environment:\\n      - OPENAI_API_KEY=${OPENAI_API_KEY}\'\' > docker-compose.yml",
-                                  "docker-compose pull",
-                                  "docker-compose up -d"]}' \
+            --parameters '{"commands":[
+              "aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin <account_id>.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com",
+              "echo \"version: \'3.8\'\\nservices:\\n  pythoncompile:\\n    image: 216989140286.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/test:latest\\n    container_name: pythoncompile-app\\n    ports:\\n      - \'8000:8000\'\\n    environment:\\n      - OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}\" > docker-compose.yml",
+              "docker-compose pull",
+              "docker-compose up -d"
+            ]}' \
             --region ${{ secrets.AWS_REGION }}
