--- a/.github/workflows/deploytoec2.yml
+++ b/.github/workflows/deploytoec2.yml
@@ -1,11 +1,12 @@
-name: Deploy to EC2 with Docker Compose
+name: Deploy FastAPI via Docker Compose
 
 on:
-  workflow_dispatch: # Ejecutar manualmente desde GitHub Actions
+  workflow_dispatch: # Permite ejecutar manualmente el pipeline
 
 jobs:
-  deploy-to-ec2:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
       # 1. Configurar las credenciales de AWS
       - name: Configure AWS credentials
@@ -15,26 +16,19 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      # 2. Ejecutar docker-compose en EC2 usando SSM con etiquetas
-      - name: Run docker-compose on EC2 via SSM
+      # 2. Clonar y ejecutar docker-compose en EC2 vía SSM
+      - name: Deploy Docker Compose via SSM
         run: |
           aws ssm send-command \
             --targets "Key=tag:Name,Values=FastAPIStack" \
             --document-name "AWS-RunShellScript" \
-            --comment "Deploying application using Docker Compose" \
+            --comment "Cloning repo and deploying Docker Compose" \
             --parameters '{"commands":[
+              "cd /home/ec2-user",
+              "rm -rf fastapi-repo",
+              "git clone https://github.com/<usuario>/<repositorio>.git fastapi-repo",
+              "cd fastapi-repo",
               "aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${ACCOUNT_ID}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com",
-              "cat <<EOF > docker-compose.yml",
-              "version: \\\"3.8\\\"",
-              "services:",
-              "  pythoncompile:",
-              "    image: ${ACCOUNT_ID}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.ECR_REPOSITORY }}:latest",
-              "    container_name: pythoncompile-app",
-              "    ports:",
-              "      - \\\"8000:8000\\\"",
-              "    environment:",
-              "      - OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}",
-              "EOF",
               "docker-compose pull",
               "docker-compose up -d"
             ]}' \
