--- a/.github/workflows/deploytoec2.yml
+++ b/.github/workflows/deploytoec2.yml
@@ -1,4 +1,4 @@
-name: Deploy FastAPI via Docker Compose
+name: Deploy FastAPI via SSH
 
 on:
   workflow_dispatch: # Permite ejecutar manualmente el pipeline
@@ -8,27 +8,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Configurar las credenciales de AWS
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
-      # 2. Clonar y ejecutar docker-compose en EC2 vía SSM
-      - name: Deploy Docker Compose via SSM
+      # 1. Configurar la clave SSH
+      - name: Configure SSH Key
         run: |
-          aws ssm send-command \
-            --targets "Key=tag:Name,Values=FastAPIStack" \
-            --document-name "AWS-RunShellScript" \
-            --comment "Cloning repo and deploying Docker Compose" \
-            --parameters '{"commands":[
-              "cd /home/ec2-user",
-              "rm -rf fastapi-repo",
-              "git clone https://github.com/tatimun/PythonCompile.git fastapi-repo",
-              "cd fastapi-repo",
-              "aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin 140023394742.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com",
-              "ls"
-            ]}' \
-            --region ${{ secrets.AWS_REGION }}
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.EC2_PUBLIC_IP }} >> ~/.ssh/known_hosts
+
+      # 2. Conectarse y ejecutar comandos en la EC2
+      - name: Deploy Docker Compose
+        run: |
+          ssh -i ~/.ssh/id_rsa ec2-user@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
+          # 2.1 Navegar al directorio del proyecto o clonar el repositorio si no existe
+          if [ ! -d "/path/to/your/project" ]; then
+            git clone https://github.com/tatimun/PythonCompile.git PythonCompile
+          else
+            cd PythonCompile
+            git pull origin main
+          fi
+          
+          # 2.2 Iniciar sesión en Amazon ECR
+          aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 140023394742.dkr.ecr.us-east-1.amazonaws.com/fastapi-app
+          
+          # 2.3 Ejecutar Docker Compose
+          docker-compose pull
+          docker-compose up -d
+          EOF
