--- a/.github/workflows/deploytoec2.yml
+++ b/.github/workflows/deploytoec2.yml
@@ -26,7 +26,7 @@ jobs:
       # 3. Agregar el host a known_hosts
       - name: Adding Known Hosts
         run: |
-          ssh-keyscan -p ${{ secrets.SSH_PORT }} -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -p 22 -H 98.82.165.50 ~/.ssh/known_hosts
 
       # 4. Sincronizar archivos con rsync
       - name: Deploy with rsync
