--- a/.github/workflows/deploytoec2.yml
+++ b/.github/workflows/deploytoec2.yml
@@ -26,12 +26,12 @@ jobs:
       # 3. Agregar el host a known_hosts
       - name: Adding Known Hosts
         run: |
-          ssh-keyscan -p 22 -H 98.82.165.50 ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       # 4. Sincronizar archivos con rsync
       - name: Deploy with rsync
         run: |
-          rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}" ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/var/www/students.asyncjs.today/dist/
+          rsync -flags source user@host:destination
 
       # 5. Reiniciar el servidor
       - name: Restart Server and Deploy Code
