--- a/.github/workflows/deploytoec2.yml
+++ b/.github/workflows/deploytoec2.yml
@@ -31,7 +31,7 @@ jobs:
       # 4. Sincronizar archivos con rsync
       - name: Deploy with rsync
         run: |
-          rsync -avz ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/ssm-user/
+            rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}" ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/ssm-user/my-app/
 
       # 5. Reiniciar el servidor
       - name: Restart Server and Deploy Code
