--- a/.github/workflows/deploytoec2.yml
+++ b/.github/workflows/deploytoec2.yml
@@ -44,7 +44,7 @@ jobs:
       # 4. Sincronizar archivos con rsync
       - name: Deploy with rsync
         run: |
-            rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}" /home/runner/work/PythonCompile/dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USER }}/my-app/
+            rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}" ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USER }}/my-app/
             
       # 5. Reiniciar el servidor
       - name: Restart Server and Deploy Code
