--- a/.github/workflows/deploytoec2.yml
+++ b/.github/workflows/deploytoec2.yml
@@ -39,12 +39,14 @@ jobs:
         run: |
            echo "Checking workspace..."
            ls -l
+           ls
+           pwd
            
 
       # 4. Sincronizar archivos con rsync
       - name: Deploy with rsync
         run: |
-            rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}" ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USER }}/my-app/
+            rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}" . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USER }}/my-app/
             
       # 5. Reiniciar el servidor
       - name: Restart Server and Deploy Code
