--- a/.github/workflows/deploytoec2.yml
+++ b/.github/workflows/deploytoec2.yml
@@ -26,7 +26,7 @@ jobs:
       # 3. Agregar el host a known_hosts
       - name: Adding Known Hosts
         run: |
-          ssh-keyscan -H 54.196.17.0
+          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - name: Debugging Secrets
         run: |
